--- a/GroceryGame/playstory.storyboard
+++ b/GroceryGame/playstory.storyboard
@@ -175,6 +175,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fpa-EM-WPf">
+                                <rect key="frame" x="67" y="117" width="241" height="177"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="177" id="efG-vY-tne"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" textAlignment="center" minimumFontSize="17" background="circle" translatesAutoresizingMaskIntoConstraints="NO" id="X9U-OZ-M7H" userLabel="Item Quantity">
+                                <rect key="frame" x="168.5" y="310" width="38" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="NOK-d3-XU7"/>
+                                    <constraint firstAttribute="width" constant="38" id="vgB-g0-q5J"/>
+                                </constraints>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZQc-QW-VMl" userLabel="Finished Button">
+                                <rect key="frame" x="136" y="364" width="102" height="46"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="Finished">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <segue destination="51L-1J-Y5e" kind="show" id="pYg-T3-I8l"/>
+                                </connections>
+                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="listicon" translatesAutoresizingMaskIntoConstraints="NO" id="Q6w-Gn-JbK">
                                 <rect key="frame" x="16" y="36" width="50" height="46"/>
                                 <constraints>
@@ -209,65 +235,41 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="31"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="nS9-VX-CBu">
-                                <rect key="frame" x="67" y="122" width="240" height="300"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fpa-EM-WPf">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="187"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="240" id="0En-Zo-Yyc"/>
-                                        </constraints>
-                                    </imageView>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" textAlignment="center" minimumFontSize="17" background="circle" translatesAutoresizingMaskIntoConstraints="NO" id="X9U-OZ-M7H" userLabel="Item Quantity">
-                                        <rect key="frame" x="101" y="207" width="38" height="38"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="38" id="NOK-d3-XU7"/>
-                                            <constraint firstAttribute="width" constant="38" id="vgB-g0-q5J"/>
-                                        </constraints>
-                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="31"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZQc-QW-VMl">
-                                        <rect key="frame" x="69" y="265" width="102" height="35"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                        <state key="normal" title="Finished">
-                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        </state>
-                                        <connections>
-                                            <segue destination="51L-1J-Y5e" kind="show" id="KQa-CK-2dn"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="7ZF-B9-fj6"/>
-                                    <constraint firstAttribute="width" constant="240" id="wAQ-Fq-z85"/>
-                                </constraints>
-                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="MVX-LA-HuU" firstAttribute="leading" secondItem="6O1-ej-Yoi" secondAttribute="trailing" constant="8" id="05P-pp-pgM"/>
+                            <constraint firstItem="X9U-OZ-M7H" firstAttribute="centerX" secondItem="6zc-q4-iuo" secondAttribute="centerX" id="41t-ia-6wR"/>
+                            <constraint firstItem="ZQc-QW-VMl" firstAttribute="top" secondItem="X9U-OZ-M7H" secondAttribute="bottom" constant="16" id="4Tt-li-7Sr"/>
                             <constraint firstItem="Q6w-Gn-JbK" firstAttribute="leading" secondItem="6zc-q4-iuo" secondAttribute="leading" constant="16" id="5k5-fS-Tdm"/>
                             <constraint firstItem="MVX-LA-HuU" firstAttribute="top" secondItem="6zc-q4-iuo" secondAttribute="top" constant="16" id="7QW-WU-6OP"/>
                             <constraint firstItem="6zc-q4-iuo" firstAttribute="trailing" secondItem="MVX-LA-HuU" secondAttribute="trailing" constant="16" id="I4t-d5-6aw"/>
-                            <constraint firstItem="nS9-VX-CBu" firstAttribute="centerX" secondItem="6zc-q4-iuo" secondAttribute="centerX" id="LI4-W3-3Ez"/>
                             <constraint firstItem="Nb1-cc-a1D" firstAttribute="centerY" secondItem="Q6w-Gn-JbK" secondAttribute="centerY" id="Rlz-fh-ItT"/>
                             <constraint firstItem="6O1-ej-Yoi" firstAttribute="centerY" secondItem="MVX-LA-HuU" secondAttribute="centerY" id="WeA-jm-SrJ"/>
+                            <constraint firstItem="ZQc-QW-VMl" firstAttribute="centerX" secondItem="6zc-q4-iuo" secondAttribute="centerX" id="Zjr-Ce-aKK"/>
+                            <constraint firstItem="Fpa-EM-WPf" firstAttribute="leading" secondItem="6zc-q4-iuo" secondAttribute="leading" constant="67" id="aU1-U8-UDK"/>
+                            <constraint firstItem="6zc-q4-iuo" firstAttribute="trailing" secondItem="Fpa-EM-WPf" secondAttribute="trailing" constant="67" id="jqt-1k-Odw"/>
+                            <constraint firstItem="X9U-OZ-M7H" firstAttribute="top" secondItem="Fpa-EM-WPf" secondAttribute="bottom" constant="16" id="ox8-ox-aFr"/>
                             <constraint firstItem="Q6w-Gn-JbK" firstAttribute="top" secondItem="6zc-q4-iuo" secondAttribute="top" constant="16" id="rgA-ZX-Awx"/>
-                            <constraint firstItem="nS9-VX-CBu" firstAttribute="top" secondItem="Nb1-cc-a1D" secondAttribute="bottom" constant="44" id="sjZ-Pc-Rc9"/>
                             <constraint firstItem="Nb1-cc-a1D" firstAttribute="leading" secondItem="Q6w-Gn-JbK" secondAttribute="trailing" constant="8" id="w2E-HN-Pxe"/>
+                            <constraint firstItem="Fpa-EM-WPf" firstAttribute="top" secondItem="Nb1-cc-a1D" secondAttribute="bottom" constant="39" id="yhi-Lw-UHH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6zc-q4-iuo"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="IOh-UK-WMk" appends="YES" id="dTw-yp-4L3"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="cartCounter" destination="6O1-ej-Yoi" id="Fem-1y-UB5"/>
                         <outlet property="itemImage" destination="Fpa-EM-WPf" id="W1V-aO-tz5"/>
-                        <outlet property="itemQuantity" destination="X9U-OZ-M7H" id="PlE-Bt-9QU"/>
+                        <outlet property="itemQuantity" destination="X9U-OZ-M7H" id="n9T-rp-buo"/>
                         <outlet property="listCounter" destination="Nb1-cc-a1D" id="klZ-E5-Lcs"/>
+                        <outlet property="tapGesture" destination="IOh-UK-WMk" id="RGU-6x-oUz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hRI-rz-PZx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="IOh-UK-WMk"/>
             </objects>
             <point key="canvasLocation" x="400.80000000000001" y="133.5832083958021"/>
         </scene>
