Edit list bug fix, Play mode improvements

--- a/GroceryGame/Base.lproj/Main.storyboard
+++ b/GroceryGame/Base.lproj/Main.storyboard
@@ -443,6 +443,6 @@
         <image name="trashcan" width="344" height="367"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="WQs-7h-8rW"/>
+        <segue reference="rlw-GP-8bu"/>
     </inferredMetricsTieBreakers>
 </document>
